# rayun.dev-page

./: .gitignore  pyproject.toml  requirements.txt
homepage/: settings.py  urls.py
main/: admin.py  igdb_api.py  lanyard_api.py  models.py  urls.py  views.py
main/static/main/: style.css
main/templates/: base.html
main/templates/main/: crudtober.html  index.html  lanyard.html  projects.html  reserved.html
