[project]
name = "rayun-dev-page"
version = "0.1.0"
description = "rayun.dev personal development page"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.10.0",
    "django>=5.2.7",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlparse>=0.5.3",
    "tzdata>=2025.2",
    "whitenoise>=6.11.0",
]
